tests/samples/negative/types/tuple_literal_arity_mismatch.ax
module tuple_literal_arity_mismatch;

fn main() -> i32 {
    let pair: (i32, bool) = (1, false, 2);
    return pair.0;
}
